<resources>
    <string name="banner_id">ca-app-pub-8775944520232965/5883480337</string>
    <string name="app_name">BarcodeScanningApp</string>
    <string name="title_activity_stock_details">StockDetails</string>
    <string name="title_activity_add_stock">AddStock</string>
    <string name="barcodeLabel">Barcode</string>
    <string name="nameLabel">Name</string>
    <string name="expireLabel">Expire Date</string>
    <string name="avanseLabel">Days Avanse</string>
    <string name="addBtnLabel">Add</string>
    <string name="settings">Settings</string>
    <string name="delete_expire">Delete Expire ?</string>
    <string name="textview">TextView</string>
    <string name="share">Share</string>
    <string name="title_activity_sellers">SellersActivity</string>
    <string name="add_seller_btn">Add Seller</string>
    <string name="native_banner">ca-app-pub-8775944520232965/3468287134</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
</resources>
