<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/new_scan"
        android:icon="@drawable/barcode"
        android:title="@string/settings"
        app:showAsAction="always" />
    <item
        android:icon="@android:drawable/ic_menu_more"
        android:menuCategory="container"
        android:title="@string/share"
        app:showAsAction="ifRoom|collapseActionView">
        <menu>
            <item
                android:enabled="false"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/share"
                android:visible="false"
                app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
                app:showAsAction="collapseActionView" />
            <item
                android:id="@+id/menu_item_delete"
                android:icon="@android:drawable/ic_menu_delete"
                android:title="@string/delete"
                android:visible="true"
                app:showAsAction="ifRoom|collapseActionView" />
        </menu>
    </item>
</menu>