<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.machkonti.barcodescanningapp.AddStock">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="0.58"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center"
            android:layout_weight="1"
            android:gravity="center_vertical|center"
            android:text="@string/barcodeLabel"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/bCode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center"
            android:text="@string/barcodeLabel"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="0.36"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center"
            android:text="@string/nameLabel"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            tools:ignore="TextViewEdits" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="0.53"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center"
            android:text="@string/expireLabel" />

        <EditText
            android:id="@+id/expire"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="date"
            tools:ignore="LabelFor,NestedWeights" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="0.61"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center"
            android:text="@string/avanseLabel" />

        <EditText
            android:id="@+id/avans"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberSigned"
            tools:ignore="LabelFor,NestedWeights" />

    </LinearLayout>

    <Button
        android:id="@+id/AddButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.26"
        android:text="@string/addBtnLabel"
        android:visibility="visible" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="0dp"
        android:layout_weight="1"
        android:paddingBottom="0dp"
        android:textAlignment="gravity"
        android:visibility="visible"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_id" />
</LinearLayout>
