<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.machkonti.barcodescanningapp.AddStock">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="0.58"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center"
            android:layout_weight="1"
            android:gravity="center_vertical|center"
            android:text="@string/barcodeLabel"
            android:textColor="@android:color/holo_orange_dark"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/bCode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center"
            android:text="@string/barcodeLabel"
            android:textAlignment="center"
            android:textColor="@android:color/holo_orange_dark"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="0.36"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center"
            android:text="@string/nameLabel"
            android:textColor="@android:color/holo_orange_dark"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@android:color/black"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="0.53"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center"
            android:text="@string/expireLabel"
            android:textColor="@android:color/holo_orange_dark"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/expire"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
            android:ems="10"
            android:inputType="date"
            android:textColor="@android:color/black"
            tools:ignore="LabelFor,NestedWeights" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="0.61"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center"
            android:text="@string/avanseLabel"
            android:textColor="@android:color/holo_orange_dark"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/avans"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
            android:ems="10"
            android:inputType="numberSigned"
            android:textColor="@android:color/black"
            tools:ignore="LabelFor,NestedWeights" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_weight="0.58"
        android:orientation="horizontal">

        <Button
            android:id="@+id/AddButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="@string/addBtnLabel"
            android:visibility="visible" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/cancel"
            android:textStyle="bold"
            android:visibility="visible" />
    </LinearLayout>

    <com.google.android.gms.ads.NativeExpressAdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom|center_vertical|center_horizontal|center"
        android:layout_weight="1"
        android:isScrollContainer="true"
        ads:adSize="320x300"
        ads:adUnitId="@string/native_banner"
        tools:ignore="ObsoleteLayoutParam"></com.google.android.gms.ads.NativeExpressAdView>
</LinearLayout>
